# sso-stack-generator

./: .bazelrc  .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
docs/: README.md  architecture.md  build-system.md  buyer-overview.md  client-intake.md  compliance-posture.md  demo-script.md  evaluation-guide.md  glossary.md  host-sizing.md  keycloak-identity-cutover.md  minimal-build-deploy-system.md  mission.md  module-test-migration-ledger.json  module-test-ownership-inventory.md  operations.md  packages.md  project-overview.md  proof-checklist.md  quickstart.md  recovery.md  restore-drill.md  security-and-auth.md  service-maturity.md  service-standard.md  services.md  support-boundaries.md  systemd-graph.md  testing.md  threat-model.md  troubleshooting.md  update-and-rollback.md
global.settings/: networks.yml  volume-init.yml  volumes.yml
gradle/: libs.versions.toml
modules/: README.md  catalog.json  stack.module.schema.json
scripts/: build-artifact.sh  deploy.sh  generate-contract-reports.sh  init-site.sh  install-bundle.sh  mount-diagnostics.sh  pull-modules.sh  security-audit.sh  stackctl.sh  test-component-selection.sh  test-contract-reports.sh  test-deploy-preflight.sh  test-deploy-scope.sh  test-deploy-state.sh  test-docs.sh  test-env-file-security.sh  test-external-modules.sh  test-install-bundle.sh  test-jellyfin-ffmpeg-websafe.sh  test-module-group.sh  test-module-runners.sh  test-module.sh  test-mount-diagnostics.sh  test-pull-modules.sh  test-service-contracts.sh  test-site.sh  verify-module-lock-overrides.sh  verify-service-ownership.sh  verify.sh
stack.compose/: autoheal.yml  bookstack.yml  caddy.yml  cadvisor.yml  chatgpt-connector.yml  crowdsec.yml  docker-exporter.yml  docker-proxy.yml  donetick.yml  dozzle.yml  element.yml  embedding.yml  forgejo-runner.yml  homeassistant.yml  homepage.yml  huly.yml  jellyfin.yml  jupyter-notebook.yml  jupyterhub.yml  keycloak-auth-gateway.yml  keycloak.yml  kopia.yml  loki.yml  mailserver.yml  mariadb.yml  mastodon.yml  onboarding.yml  onlyoffice.yml  opensearch.yml  pipeline.yml  portal.yml  postgres-ssd.yml  progression.yml  qdrant.yml  (+7 more)
(+512 files in other folders)
